main.css
/* @media screen and (max-width: 449px) { */
body,
html {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

body {
  font-family: Roboto;
  font-size: 12px;
  color: #424242;
}

.hamburger {
  padding: 20px 0px 0px 10px;
  /* border: 2px solid black; */
  order: -1;
  position: absolute;
  display: inline-block;
  size: 100%;
}

a.icon {
  /* background: black; */
  display: block;
  position: relative;
  right: 0;
  top: 0;
  font-size: 400%;
  color: black;
}

h1,
h2,
h3,
h4,
h5 {
  margin: 0;
}

header,
nav,
footer,
section,
article,
div {
  box-sizing: border-box;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

/*
 *
 * Common
 * 
 */

.news__more {
  float: right;
  font-size: 0.8em;
  color: #333;
  text-decoration: none;
}

/*
 *
 * Header
 *
 */

.header {
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
  min-height: 56px;
  transition: min-height 0.3s;
  display: flex;
  flex-wrap: wrap;
}

.header__inner {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.header__logo {
  height: 72px;
  /* margin-right: 1em; */
  /* vertical-align: top; */
  margin-top: 12px;
  display: block;
  margin-right: auto;
  margin-left: auto;
  /* width: 50%; */
}

.header__title {
  font-weight: 300;
  font-size: 3em;
  margin: 0.5em 0.25em;
  display: block;
  color: #212121;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

/*
 *
 * Top Level Navigation
 *
 */

.nav {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.nav__list {
  width: 100%;
  padding: 0;
  margin: 0;
}

.nav__item {
  box-sizing: border-box;
  display: block;
  width: 24%;
  text-align: center;
  line-height: 24px;
  padding: 24px;
  text-transform: uppercase;
}

.nav a {
  text-decoration: none;
  color: #616161;
  padding: 1.5em;
}

.nav a:hover {
  text-decoration: underline;
  color: #212121;
}

#drawer {
  /* display: none; */
  display: none;
}

/*
 *
 * Main
 *
 */

main {
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}

/*
 *
 * Content
 *
 */

/*
 *
 * Hero
 *
 */

.hero {
  width: 100%;
  position: relative;
  background-image: url("./images/dog.jpg");
  background-size: cover;
  height: 300px;
}

.hero article {
  box-sizing: border-box;
  background-color: #000;
  background-color: rgba(0, 0, 0, 0.7);
  position: absolute;
  bottom: 0;
  height: 40%;
  width: 100%;
  color: #fff;
  padding: 1em;
}

/*
 *
 * Top News
 *
 */

.top-news {
  height: 300px;
  border-bottom: 1px solid #e0e0e0;
  padding: 1em;
}

.news__title {
  font-weight: 300;
  border-bottom: 1px solid #e0e0e0;
  line-height: 24px;
  font-size: 16px;
}

.top-news__item {
  border-bottom: 1px solid #e0e0e0;
  padding: 1em 0;
  line-height: 19.2px;
}

.top-news__item:before {
  content: "» ";
}

.top-news__item:last-child {
  border-bottom: none;
}

.top-news__item a {
  text-decoration: none;
  color: #666;
}

.top-news__item a:hover,
.top-news__item a:active {
  text-decoration: underline;
}

/*
 *
 * Sport Scores
 *
 */

.scores {
  padding-top: 1em;
}

.scores__table {
  width: 100%;
  border-collapse: collapse;
}

.scores__table th,
.scores__table td {
  padding: 1em;
}

.scores__table th {
  color: #fff;
  font-weight: 300;
  background-color: #78909c;
}

.scores__table tr:nth-child(odd) td {
  background-color: #fff;
}

.scores__table tr:nth-child(even) td {
  background-color: #eceff1;
}

.scores__table td.winner {
  font-weight: bold;
}

.scores__table td:nth-child(3) {
  text-align: right;
}

.scores__table td:nth-child(2),
.scores__table td:nth-child(5) {
  text-align: center;
}

/*
 *
 * Weather
 *
 */

.weather {
  padding: 1em;
}

.weather__location {
  display: block;
  font-weight: 300;
  font-size: 1.5em;
}

.weather__desc {
  display: block;
  font-size: 1.2em;
}

.weather__today {
  width: 60%;
  vertical-align: middle;
}

.weather__today__image {
  vertical-align: middle;
}

.weather__today__temp {
  font-size: 3em;
}

.weather__today__deg {
  font-size: 2em;
  display: inline;
}

.weather__next__item {
  display: inline-block;
  width: 20%;
  text-align: center;
}

.weather__next__item span {
  display: block;
}

.weather__next__image {
  width: 100%;
}

/*
 *
 * Recent News
 *
 */

.recent-news {
  clear: both;
  padding: 1em;
}

.snippet {
  clear: both;
  margin: 24px 0;
}

.snippet__thumbnail {
  width: 100px;
  float: left;
  margin-right: 1em;
}

.snippet__title {
  font-weight: 500;
}

.snippet__title a {
  text-decoration: none;
  color: #666;
}

.snippet__title a:hover,
.snippet__title a:active {
  text-decoration: underline;
}

/*
 *
 * Footer
 *
 */

footer {
  border-top: 1px solid #e0e0e0;
  padding: 1em;
  width: 100%;
  text-align: center;
}

footer li {
  display: inline-block;
  margin: 0 1em;
}

footer a {
  text-decoration: none;
  color: #333;
  padding: 1.5em;
}
/* } */

/* -------------------------------------------------------------------------------------------------------------------------------------------- */

@media screen and (min-width: 450px) {
  body,
  html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
  }

  body {
    font-family: Roboto;
    font-size: 12px;
    color: #424242;
  }

  h1,
  h2,
  h3,
  h4,
  h5 {
    margin: 0;
  }

  header,
  nav,
  footer,
  section,
  article,
  div {
    box-sizing: border-box;
  }

  ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }

  /*
 *
 * Common
 * 
 */

  .news__more {
    float: right;
    font-size: 0.8em;
    color: #333;
    text-decoration: none;
  }

  /*
 *
 * Header
 *
 */

  .header {
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
    min-height: 56px;
    transition: min-height 0.3s;
  }

  .header__inner {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }

  .header__logo {
    height: 72px;
    display: block;
    margin-right: auto;
    margin-left: auto;
    /* vertical-align: top; */
    margin-top: 12px;
  }
  .header__title {
    font-weight: 300;
    font-size: 4em;
    margin: 0.5em 0.25em;
    display: block;
    color: #212121;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
  }

  /* hamburger icon */
  a.icon {
    /* background: black; */
    display: none;
    position: relative;
    right: 0;
    top: 0;
    font-size: 400%;
    color: black;
  }

  /*
 *
 * Top Level Navigation
 *
 */

  .nav {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }

  .nav__list {
    width: 100%;
    padding: 0;
    margin: 0;
  }

  .nav__item {
    box-sizing: border-box;
    display: inline-block;
    width: 24%;
    text-align: center;
    line-height: 24px;
    padding: 24px;
    text-transform: uppercase;
  }

  .nav a {
    text-decoration: none;
    color: #616161;
    padding: 1.5em;
  }

  .nav a:hover {
    text-decoration: underline;
    color: #212121;
  }

  nav#drawer {
    display: block;
  }

  /*
 *
 * Main
 *
 */

  main {
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-wrap: wrap;
  }

  /*
 *
 * Content
 *
 */

  /*
 *
 * Hero
 *
 */
  .content {
    display: flex;
    flex-wrap: wrap;
  }

  .hero {
    width: 50%;
    position: relative;
    background-image: url("./images/dog.jpg");
    background-size: cover;
    height: 300px;
  }

  .hero article {
    box-sizing: border-box;
    background-color: #000;
    background-color: rgba(0, 0, 0, 0.7);
    position: absolute;
    bottom: 0;
    height: 40%;
    width: 100%;
    color: #fff;
    padding: 1em;
  }

  /*
 *
 * Top News
 *
 */
  /* 
  .top-news {
    height: 300px;
    border-bottom: 1px solid #e0e0e0;
    padding: 1em;
  } */
  .top-news {
    height: 300px;
    border-bottom: 1px solid #e0e0e0;
    padding: 1em;
    width: 50%;
  }

  .news__title {
    font-weight: 300;
    border-bottom: 1px solid #e0e0e0;
    line-height: 24px;
    font-size: 16px;
  }

  .top-news__item {
    border-bottom: 1px solid #e0e0e0;
    padding: 1em 0;
    line-height: 19.2px;
  }

  .top-news__item:before {
    content: "» ";
  }

  .top-news__item:last-child {
    border-bottom: none;
  }

  .top-news__item a {
    text-decoration: none;
    color: #666;
  }

  .top-news__item a:hover,
  .top-news__item a:active {
    text-decoration: underline;
  }

  /*
 *
 * Sport Scores
 *
 */

  /* .scores {
    padding-top: 1em;
  } */
  .scores {
    padding-top: 1em;
    width: 60%;
  }

  .scores__table {
    width: 100%;
    border-collapse: collapse;
  }

  .scores__table th,
  .scores__table td {
    padding: 1em;
  }

  .scores__table th {
    color: #fff;
    font-weight: 300;
    background-color: #78909c;
  }

  .scores__table tr:nth-child(odd) td {
    background-color: #fff;
  }

  .scores__table tr:nth-child(even) td {
    background-color: #eceff1;
  }

  .scores__table td.winner {
    font-weight: bold;
  }

  .scores__table td:nth-child(3) {
    text-align: right;
  }

  .scores__table td:nth-child(2),
  .scores__table td:nth-child(5) {
    text-align: center;
  }

  /*
 *
 * Weather
 *
 */

  /* .weather {
    padding: 1em;
  } */
  .weather {
    padding: 1em;
    width: 40%;
  }

  .weather__location {
    display: block;
    font-weight: 300;
    font-size: 1.5em;
  }

  .weather__desc {
    display: block;
    font-size: 1.2em;
  }

  .weather__today {
    width: 60%;
    vertical-align: middle;
  }

  .weather__today__image {
    vertical-align: middle;
  }

  .weather__today__temp {
    font-size: 3em;
  }

  .weather__today__deg {
    font-size: 2em;
    display: inline;
  }

  .weather__next__item {
    display: inline-block;
    width: 20%;
    text-align: center;
  }

  .weather__next__item span {
    display: block;
  }

  .weather__next__image {
    width: 100%;
  }

  /*
 *
 * Recent News
 *
 */

  .recent-news {
    clear: both;
    padding: 1em;
  }

  .snippet {
    clear: both;
    margin: 24px 0;
  }

  .snippet__thumbnail {
    width: 100px;
    float: left;
    margin-right: 1em;
  }

  .snippet__title {
    font-weight: 500;
  }

  .snippet__title a {
    text-decoration: none;
    color: #666;
  }

  .snippet__title a:hover,
  .snippet__title a:active {
    text-decoration: underline;
  }

  /*
 *
 * Footer
 *
 */

  /* footer {
    border-top: 1px solid #e0e0e0;
    padding: 1em;
    width: 100%;
  }

  footer li {
    display: inline-block;
    margin: 0 1em;
  }

  footer a {
    text-decoration: none;
    color: #333;
    padding: 1.5em;
  } */
}

@media screen and (min-width: 700px) {
  .container {
    width: 700px;
    margin-right: auto;
    margin-left: auto;
  }
}

